@@ -9,6 +9,7 @@
   the corresponding filter.
 * Implemented smooth mode for the FIR/IIR type of equalizer which performs the
   cross-fade on the change of filter characteristics.
+* Implemented functions for converting the frequency to a note.
 
 === 1.0.8 ===
 * Added MIDI note to frequency convertion function dspu::midi_note_to_frequency.
